Fix horizontal alignment of tipslist

--- a/src/components/header/header.styles.css
+++ b/src/components/header/header.styles.css
@@ -54,6 +54,12 @@ h2 {
     opacity: 0.4;
     overflow: hidden;
     position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px;
+    width: auto;
     padding-bottom: 20%;
 }
 
